[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/background.png" type="Texture" id=2]
[ext_resource path="res://scene/TitlescreenScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/hurt.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/confirm.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/paddle_hit.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/wall_hit.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/brick-hit-2.wav" type="AudioStream" id=8]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="Background"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 62.0
margin_right = 20.0
margin_bottom = 62.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="TitlescreenScene" parent="." instance=ExtResource( 3 )]

[node name="SoundManager" type="Node" parent="."]

[node name="paddle_hit" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 6 )

[node name="confirm" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 5 )

[node name="wall_hit" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 7 )

[node name="hurt" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="brick_hit_2" type="AudioStreamPlayer2D" parent="SoundManager"]
stream = ExtResource( 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
